Fix BackgroundCanvas overflow cutoff issues

--- a/components/BackgroundCanvas.module.scss
+++ b/components/BackgroundCanvas.module.scss
@@ -21,7 +21,7 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: -50%;
 
   overflow: hidden;
 
@@ -30,7 +30,7 @@
 
 .background-canvas {
   position: absolute;
-  top: 50%;
+  top: 37.5%;
   left: 50%;
 
   opacity: 0;
